# zt-infra-full

./: .checkov.yml  .env.example  .gitignore  .tfsec.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
contracts/: DAALog.sol
daal/: schema.sql
docs/: A2A_POLICY_PROXY.md  ARCHITECTURE.md  DAAL.md  DEMO_NARRATIVE.md  ENTERPRISE_READINESS.md  FAILURE_MODES.md  GITHUB.md  INTEROPERABILITY_DEMO.md  LANGGRAPH_PLUGIN.md  LAUNCH_REVIEW_RESPONSE.md  MCP_ZERO_TRUST_GATEWAY.md  OPENAI_AGENTS_SDK_GUARDRAIL_PLUGIN.md  OPENAI_ASSISTANTS_ZERO_TRUST_WRAPPER.md  OPENAI_RESPONSES_ZERO_TRUST_WRAPPER.md  POLICY_EXAMPLES.md  PROJECT_SCOPE.md  PUBLIC_READINESS_CHECKLIST.md  SOC2_CONTROL_MAPPING.md  STATUS.md
examples/: langgraph_control_plane_demo.py
landing/: index.html
policies/: soc2-terraform-controls.yml
provisioner/: package-lock.json  package.json
scripts/: check-das-config.mjs  collect-evidence.sh  create-tailscale-secret.sh  deploy-daal-thirdweb.sh  deploy.sh  destroy.sh  fetch-logs.sh  github-ready.sh  policy-scan.sh  preflight.sh
terraform/: .terraform.lock.hcl  backend.hcl.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  user-data.sh.tpl  variables.tf  versions.tf
tests/: test_a2a_policy_proxy.py  test_bootstrap_simulation.py  test_interoperability_demo_contract.py  test_langgraph_plugin.py  test_live_integration.py  test_mcp_zero_trust_gateway.py  test_static_repo.py  (+3 more)
(+46 files in other folders)
